kubernetes/apps/base/security/authentik/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
spec:
  hostnames: ["authentik.example.com"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: authentik-server
          namespace: security
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
